--- a/petshop/src/assets/css/componentes/cabecalho.css
+++ b/petshop/src/assets/css/componentes/cabecalho.css
@@ -30,12 +30,14 @@
 
 .cabecalho__logo {
     width: 3rem;
+    display:inline-block;
 }
 
 .cabecalho__titulo {
     font-family: var(--fonte-familia-logo);
     font-size: var(--fonte-tamanho-logo);
     margin-left: .5rem;
+    display:inline-block;
 }
 
 .menu-cabecalho-background {
